# deref-pat

./: Cargo.toml  README.md
deref_pat/: Cargo.toml
deref_pat/src/: lib.rs
deref_pat/tests/: test.rs
deref_pat_macro/: Cargo.toml
deref_pat_macro/src/: ident.rs  lib.rs  transform.rs  util.rs
src/: ident.rs  lib.rs  transform.rs  util.rs
tests/: test.rs
