[package]
name = "deref_pat"
version = "0.1.0"
edition = "2021"
authors = ["Zerthox"]
description = "Macro to use deref patterns."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.49"
quote = "1.0.23"
syn = { version ="1.0.107", features = ["full", "visit-mut", "extra-traits"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
